--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
 		"svelte-seo": "^1.5.3",
 		"tslib": "^2.5.0",
 		"typescript": "^5.1.6",
+		"validate-branch-name": "^1.3.0",
 		"vite": "^4.4.4",
 		"vite-plugin-compression": "^0.5.1",
 		"vitest": "^0.33.0"
@@ -117,5 +118,9 @@
 		"commitizen": {
 			"path": "./node_modules/cz-conventional-changelog"
 		}
+	"validate-branch-name":
+  {
+		"pattern": "^(master|main|develop|dev){1}$|^(feature|fix|hotfix|release|refractor).+$",
+		"errorMsg": "❌ Uh-oh! Please check package.json > validate-branch-name for allowed branch names!"
 	}
 }
