--- a/package.json
+++ b/package.json
@@ -118,6 +118,14 @@
 		"commitizen": {
 			"path": "./node_modules/cz-conventional-changelog"
 		}
+	},
+	"commitlint":
+  {
+		"extends":
+    [
+			"@commitlint/config-conventional"
+		]
+	},
 	"validate-branch-name":
   {
 		"pattern": "^(master|main|develop|dev){1}$|^(feature|fix|hotfix|release|refractor).+$",
