--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
 		"node-fetch": "^3.3.1",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
+		"sass": "^1.69.5",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"svelte-preprocess": "^5.0.3",
