--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
 	"description": "Betarena Official Scores Platform (PWA)",
 	"version": "2.4.5",
 	"type": "module",
-	"engines": {
+	"engines":
+  {
 		"npm": "8.19.1",
 		"node": "16.17.0"
 	},
+  "engineStrict": true,
 	"scripts": {
-		"start": "node build/index.js",
-		"build": "cross-env NODE_OPTIONS=--max_old_space_size=4096 VITE_SCORES_PKG_VERSION=v.$(npm pkg get version --workspaces=false | tr -d \\\") VITE_SCORES_LIB_PKG_VERSION=v.$(npm info @betarena/scores-lib version | tr -d \\\") VITE_SENTRY_UPLOAD_SOURCEMAPS=true vite build",
-		"build-2": "cross-env NODE_OPTIONS=--max_old_space_size=4096 VITE_SCORES_PKG_VERSION=v.$(npm pkg get version --workspaces=false | tr -d \\\") VITE_SCORES_LIB_PKG_VERSION=v.$(npm info @betarena/scores-lib version | tr -d \\\") VITE_SENTRY_UPLOAD_SOURCEMAPS=true vite build",
+		"prepare": "is-ci || husky install",
+		"start": "cross-env NODE_OPTIONS='-r dotenv/config' node build/index.js",
+		"build": "cross-env NODE_OPTIONS='-r dotenv/config --max_old_space_size=4096' VITE_SCORES_PKG_VERSION=v.$(npm pkg get version --workspaces=false | tr -d \\\") VITE_SCORES_LIB_PKG_VERSION=v.$(npm info @betarena/scores-lib version | tr -d \\\") VITE_SENTRY_UPLOAD_SOURCEMAPS=true vite build",
+		"build-2": "cross-env NODE_OPTIONS='-r dotenv/config --max_old_space_size=4096' VITE_SCORES_PKG_VERSION=v.$(npm pkg get version --workspaces=false | tr -d \\\") VITE_SCORES_LIB_PKG_VERSION=v.$(npm info @betarena/scores-lib version | tr -d \\\") VITE_SENTRY_UPLOAD_SOURCEMAPS=true vite build",
 		"test": "npm run test:integration && npm run test:unit",
 		"svelte-check": "svelte-check --tsconfig ./tsconfig.json",
 		"svelte-check::watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -20,7 +23,7 @@
 		"sveltekit::debug": "cross-env NODE_OPTIONS='--inspect' vite dev --host --port 3050",
 		"sveltekit::debug::bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
 		"sveltekit::debug::preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 4173",
-		"sveltekit::dev": "vite dev --host --port 3050 --force",
+		"sveltekit::dev": "cross-env NODE_OPTIONS='-r dotenv/config' vite dev --host --port 3050 --force",
 		"sveltekit::dev::1-click::spin": "make dev-1-click-spin",
 		"sveltekit::dev::docker": "vite dev --host --port 5055",
 		"sveltekit::dev::docker:up": "docker-compose -f docker-compose.dev.yml up",
@@ -76,6 +79,8 @@
 		"xml-formatter": "^2.6.1"
 	},
 	"devDependencies": {
+		"@commitlint/cli": "^17.8.0",
+		"@commitlint/config-conventional": "^17.8.0",
 		"@playwright/test": "^1.36.1",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.22.3",
@@ -85,11 +90,15 @@
 		"@types/ua-parser-js": "^0.7.36",
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
+		"conventional-changelog-cli": "^4.1.0",
 		"cross-env": "^7.0.3",
+		"husky": "^8.0.3",
 		"cypress": "^12.17.1",
-		"eslint": "^8.39.0",
+		"cz-conventional-changelog": "^3.3.0",
+		"is-ci": "^3.0.1",
+		"eslint": "^8.51.0",
 		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte": "^2.30.0",
+		"eslint-plugin-svelte": "^2.34.0",
 		"jsdom": "^22.1.0",
 		"node-fetch": "^3.3.1",
 		"prettier": "^2.8.8",
@@ -103,5 +112,10 @@
 		"vite": "^4.4.4",
 		"vite-plugin-compression": "^0.5.1",
 		"vitest": "^0.33.0"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
 	}
 }
