--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 		"test::integration": "playwright test",
 		"test::integration-ui": "playwright test --ui",
 		"test::unit": "vitest",
-		"coverage": "vitest run --coverage"
+		"coverage": "vitest run --coverage",
+    "sass-watch": "sass --watch static/app.scss static/app.css"
 	},
 	"dependencies": {
 		"@betarena/scores-lib": "^1.9.10",
@@ -71,6 +72,7 @@
 		"masonry-layout": "^4.2.2",
 		"moralis": "^2.18.4",
 		"request-ip": "^3.3.0",
+		"svelte-apexcharts": "^1.0.2",
 		"table": "^6.8.1",
 		"ua-parser-js": "^1.0.35",
 		"unique-username-generator": "^1.1.3",
