docs(.vscode): update respective
- udpate informative comments.
- update snippets.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,20 +5,21 @@
 	// List of extensions which should be recommended for users of this workspace.
 	"recommendations":
   [
-    "fivethree.vscode-svelte-snippets",
-    "ardenivanov.svelte-intellisense",
-    "wayou.vscode-todo-highlight",
-    "ecmel.vscode-html-css",
-    "vunguyentuan.vscode-css-variables",
-    "svelte.svelte-vscode",
-    "pkief.material-icon-theme",
-    "akamud.vscode-theme-onedark",
-    "mikestead.dotenv",
-    "pranaygp.vscode-css-peek"
-  ],
+    "fivethree.vscode-svelte-snippets"
+    , "ardenivanov.svelte-intellisense"
+    , "wayou.vscode-todo-highlight"
+    // ▓ IMPORTANT
+    // ▓ use version (<=v1.14.1), issues found in latests versions with local loading of .css files.
+    , "ecmel.vscode-html-css"
+    , "vunguyentuan.vscode-css-variables"
+    , "svelte.svelte-vscode"
+    , "pkief.material-icon-theme"
+    , "akamud.vscode-theme-onedark"
+    , "mikestead.dotenv"
+    , "pranaygp.vscode-css-peek"
+  ]
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
-	"unwantedRecommendations":
+	, "unwantedRecommendations":
   [
-
 	]
 }
