--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
 		]
 	},
 	"validate-branch-name": {
-		"pattern": "^(master|main|develop|dev){1}$|^(feature|fix|hotfix|release|refractor).+$",
+		"pattern": "^(master|main|develop|dev){1}$|^(feature|fix|hotfix|release|refactor|chore).+$",
 		"errorMsg": "❌ Uh-oh! Please check package.json > validate-branch-name for allowed branch names!"
 	}
 }
