--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,5 @@
 engine-strict=true
+
+# ▓ IMPORTANT
+# ▓ > enable when doing development on windows.
+# script-shell="C:\\Program Files\\git\\bin\\bash.exe
