--- a/package.json
+++ b/package.json
@@ -43,81 +43,81 @@
 	},
 	"dependencies": {
 		"@betarena/scores-lib": "^1.11.0-alpha.2",
-		"@lukeed/uuid": "^2.0.1",
-		"@metamask/sdk": "^0.1.0",
-		"@moralisweb3/client-firebase-auth-utils": "^2.18.4",
-		"@moralisweb3/client-firebase-evm-auth": "^2.18.4",
-		"@playwright/test": "^1.36.1",
-		"@sentry/browser": "^7.49.0",
-		"@sentry/sveltekit": "^7.73.0",
-		"@sentry/tracing": "^7.49.0",
-		"@types/node": "^20.8.5",
-		"@walletconnect/web3-provider": "^1.8.0",
-		"@web3modal/ethers5": "^3.3.2",
-		"chart.js": "^4.4.1",
-		"colorthief": "^2.4.0",
-		"compression": "^1.7.4",
-		"cookie": "^0.5.0",
-		"device-detector-js": "^3.0.3",
-		"dotenv": "^16.3.1",
-		"email-validator": "^2.0.4",
-		"ethers": "^5.7.2",
-		"express": "^4.17.3",
-		"express-sslify": "^1.2.0",
-		"firebase": "^9.20.0",
-		"graphql-request": "^5.0.0",
-		"graphql-subscriptions-client": "^0.16.4",
-		"heroku-ssl-redirect": "^0.1.1",
-		"ibantools": "^4.3.3",
-		"ioredis": "^5.3.2",
-		"lz-string": "^1.5.0",
-		"masonry-layout": "^4.2.2",
-		"moralis": "^2.18.4",
-		"request-ip": "^3.3.0",
-		"svelte-apexcharts": "^1.0.2",
-		"table": "^6.8.1",
-		"ua-parser-js": "^1.0.35",
-		"unique-username-generator": "^1.1.3",
-		"vite-plugin-css-injected-by-js": "^3.2.1",
-		"vite-plugin-preload": "^0.3.1",
-		"xml-formatter": "^2.6.1"
+		"@lukeed/uuid": "2.0.1",
+		"@metamask/sdk": "0.1.0",
+		"@moralisweb3/client-firebase-auth-utils": "2.18.4",
+		"@moralisweb3/client-firebase-evm-auth": "2.18.4",
+		"@playwright/test": "1.36.1",
+		"@sentry/browser": "7.73.0",
+		"@sentry/sveltekit": "7.73.0",
+		"@sentry/tracing": "7.49.0",
+		"@types/node": "20.8.5",
+		"@walletconnect/web3-provider": "1.8.0",
+		"@web3modal/ethers5": "3.3.2",
+		"chart.js": "4.4.1",
+		"colorthief": "2.4.0",
+		"compression": "1.7.4",
+		"cookie": "0.5.0",
+		"device-detector-js": "3.0.3",
+		"dotenv": "16.3.1",
+		"email-validator": "2.0.4",
+		"ethers": "5.7.2",
+		"express": "4.18.2",
+		"express-sslify": "1.2.0",
+		"firebase": "9.20.0",
+		"graphql-request": "5.1.0",
+		"graphql-subscriptions-client": "0.16.4",
+		"heroku-ssl-redirect": "0.1.1",
+		"ibantools": "4.3.3",
+		"ioredis": "5.3.2",
+		"lz-string": "1.5.0",
+		"masonry-layout": "4.2.2",
+		"moralis": "2.18.4",
+		"request-ip": "3.3.0",
+		"svelte-apexcharts": "1.0.2",
+		"table": "6.8.1",
+		"ua-parser-js": "1.0.35",
+		"unique-username-generator": "1.1.3",
+		"vite-plugin-css-injected-by-js": "3.2.1",
+		"vite-plugin-preload": "0.3.1",
+		"xml-formatter": "2.6.1"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^17.8.0",
-		"@commitlint/config-conventional": "^17.8.0",
-		"@playwright/test": "^1.36.1",
-		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.22.3",
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/svelte": "^4.0.3",
-		"@types/masonry-layout": "^4.2.5",
-		"@types/ua-parser-js": "^0.7.36",
-		"@typescript-eslint/eslint-plugin": "^5.59.1",
-		"@typescript-eslint/parser": "^5.59.1",
-		"conventional-changelog-cli": "^4.1.0",
-		"cross-env": "^7.0.3",
-		"cypress": "^12.17.1",
-		"cz-conventional-changelog": "^3.3.0",
-		"eslint": "^8.51.0",
-		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte": "^2.34.0",
-		"husky": "^8.0.3",
-		"is-ci": "^3.0.1",
-		"jsdom": "^22.1.0",
-		"node-fetch": "^3.3.1",
-		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.10.1",
-		"sass": "^1.69.5",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
-		"svelte-preprocess": "^5.0.3",
-		"svelte-seo": "^1.5.3",
-		"tslib": "^2.5.0",
-		"typescript": "^5.1.6",
-		"validate-branch-name": "^1.3.0",
-		"vite": "^4.4.4",
-		"vite-plugin-compression": "^0.5.1",
-		"vitest": "^0.33.0"
+		"@commitlint/cli": "17.8.1",
+		"@commitlint/config-conventional": "17.8.1",
+		"@playwright/test": "1.36.1",
+		"@sveltejs/adapter-node": "1.3.1",
+		"@sveltejs/kit": "1.22.3",
+		"@testing-library/jest-dom": "5.16.5",
+		"@testing-library/svelte": "4.0.3",
+		"@types/masonry-layout": "4.2.5",
+		"@types/ua-parser-js": "0.7.36",
+		"@typescript-eslint/eslint-plugin": "5.59.1",
+		"@typescript-eslint/parser": "5.59.1",
+		"conventional-changelog-cli": "4.1.0",
+		"cross-env": "7.0.3",
+		"cypress": "12.17.1",
+		"cz-conventional-changelog": "3.3.0",
+		"eslint": "8.51.0",
+		"eslint-config-prettier": "8.8.0",
+		"eslint-plugin-svelte": "2.34.0",
+		"husky": "8.0.3",
+		"is-ci": "3.0.1",
+		"jsdom": "22.1.0",
+		"node-fetch": "3.3.2",
+		"prettier": "2.8.8",
+		"prettier-plugin-svelte": "2.10.1",
+		"sass": "1.69.5",
+		"svelte": "4.0.5",
+		"svelte-check": "3.4.6",
+		"svelte-preprocess": "5.0.4",
+		"svelte-seo": "1.5.3",
+		"tslib": "2.5.0",
+		"typescript": "5.3.2",
+		"validate-branch-name": "1.3.0",
+		"vite": "4.4.4",
+		"vite-plugin-compression": "0.5.1",
+		"vitest": "0.33.0"
 	},
 	"config": {
 		"commitizen": {
