ci(github-actions): update workflow
- Porting of the api-data-narratives repository GitHub Actions Workflow
to scores (this) project.
- Applied same repository-wide labels.
- Corrected to make use of node + npm of recent migration to 18 from 16.
- Applied increase in memeory for node process that was causing build
issues and allowing for errors to slip by and be deployed to an
environment.

--- a/.github/workflows/pr-main-open.yml
+++ b/.github/workflows/pr-main-open.yml
@@ -1,18 +1,34 @@
-name: 'Dev - (PR) Open'
+# ╭──────────────────────────────────────────────────────────────────╮
+# │ 🐙 GITHUB ACIONS CI/CD WORKFLOW                                  │
+# ┣──────────────────────────────────────────────────────────────────┫
+# │ Responsible for:                                                 │
+# │ ➤ [1] auto-commenting of project pull-request.                   │
+# ╰──────────────────────────────────────────────────────────────────╯
+
+name: '📌 Pull-Request Open'
 
 on:
   pull_request:
-    types:
-      - opened
     branches:
       - main
+    types:
+      - opened
+
 jobs:
+
+  # ╭──────────────────────────────────────────────────────────────────╮
+  # │ NOTE:                                                            │
+  # │ ➤ [1] auto-commenting of project pull-request.                   │
+  # ╰──────────────────────────────────────────────────────────────────╯
 
   add_comment:
     name: 'Add (PR) Comment'
     runs-on: ubuntu-22.04
     steps:
+
       - uses: mshick/add-pr-comment@v1
         with:
-          message: Please set the **Pull-Request** `title` to either that of either `major`, `minor`, or `patch`.
+          message: |
+            > [!IMPORTANT]
+            > Please set a versioning label of either `semver:patch`, `semver:minor`, or `semver:major` to **THIS** `Pull-Request`.
           repo-token: ${{ secrets.GITHUB_TOKEN }}
