--- a/.github/workflows/pr-dev-check.yml
+++ b/.github/workflows/pr-dev-check.yml
@@ -35,7 +35,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: dev
+          ref: ${{ github.ref }}
       - uses: actions/setup-node@v3
         with:
           node-version: 18.19.0
