ci(github-actions): update workflow (#1946)
* ci(github-actions): update workflow

- Porting of the api-data-narratives repository GitHub Actions Workflow
to scores (this) project.
- Applied same repository-wide labels.
- Corrected to make use of node + npm of recent migration to 18 from 16.
- Applied increase in memeory for node process that was causing build
issues and allowing for errors to slip by and be deployed to an
environment.

* ci(github-actions): update workflow

- Add separate workflow for pull-requests to origin/dev branch.
- Updates workflow names used, for differentiation.

* ci(github-actions): change flags

- Update NODE_OPTIONS flag to be declared as an export.

* fix(missing-import): testing for CI

- Missing import for a potential issue related to CI not working.

* ci(github-actions): correct flags

- Update NODE_OPTIONS flag to be declared as an export.

* ci(github-actions): correct checkout branch

- Update correct branch checkout.

--- a/.github/workflows/pr-dev-check.yml
+++ b/.github/workflows/pr-dev-check.yml
@@ -2,33 +2,61 @@
 # │ 🐙 GITHUB ACIONS CI/CD WORKFLOW                                  │
 # ┣──────────────────────────────────────────────────────────────────┫
 # │ Responsible for:                                                 │
-# │ ➤ [1] auto-commenting of project pull-request.                   │
+# │ ➤ [1] build check of project as a Docker Image                   │
+# │ ➤ [2] build check of project as a Check PR Label                 │
 # ╰──────────────────────────────────────────────────────────────────╯
 
-name: '📌 Pull-Request Open'
+name: '🔍 Pull-Request Check [dev]'
 
 on:
   pull_request:
     branches:
-      - main
+      - dev
     types:
       - opened
+      - reopened
+      - labeled
+      - unlabeled
+      - synchronize
+
+env:
+  DOCKER_IMAGE: 'scores_web'
 
 jobs:
 
   # ╭──────────────────────────────────────────────────────────────────╮
   # │ NOTE:                                                            │
-  # │ ➤ [1] auto-commenting of project pull-request.                   │
+  # │ ➤ [1] check for correct build(s)                                 │
   # ╰──────────────────────────────────────────────────────────────────╯
 
-  add_comment:
-    name: 'Add (PR) Comment'
+  npm-build-check:
+    name: 🪀 NPM Build Check
     runs-on: ubuntu-22.04
     steps:
-
-      - uses: mshick/add-pr-comment@v1
+      - uses: actions/checkout@v3
         with:
-          message: |
-            > [!IMPORTANT]
-            > Please set a versioning label of either `semver:patch`, `semver:minor`, or `semver:major` to **THIS** `Pull-Request`.
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          ref: ${{ github.ref }}
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18.19.0
+      - name: '🏗️ Set npm version'
+        run: |
+          npm install -g npm@10.2.3
+      - name: 'create .env'
+        run: |
+          echo ${{ secrets.ENV_FILE }} | base64 -d > .env
+      - name: '🟩 Build npm'
+        run: |
+          export NODE_OPTIONS="--max-old-space-size=8192"
+          npm ci
+          npm run build
+
+  # docker-image-build:
+  #   needs: npm-build-check
+  #   name: 🐳 Docker Image Build
+  #   runs-on: ubuntu-22.04
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Build docker image
+  #       run: |
+  #         docker build . --file ./docker/prod.Dockerfile --tag ${{ env.DOCKER_IMAGE }}:$(date +%s)
