chore: update root files
- [1] Update TsConfig to support es2021 lib.
- [2] Update EsLint rules.

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -64,10 +64,10 @@ ignorePatterns:
   - src/lib/geo-js
   - src/lib/graphql
   - src/lib/redis
-  - src/lib/store
+  # - src/lib/store
+  # - src/routes
   - src/lib/types
   - src/params
-  - src/routes
 
 plugins:
   - "@typescript-eslint"
@@ -133,7 +133,7 @@ rules:
     - only-multiline
   comma-style:
     - error
-    - first
+    - last
   operator-linebreak:
     - error
     - before
@@ -158,3 +158,4 @@ rules:
   one-var:
     - error
     - initialized: "consecutive"
+  no-extra-semi: 0
