--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -100,6 +100,8 @@ rules:
   'svelte/valid-compile': 0
   'svelte/no-at-html-tags': 0
 
+  no-console:
+    - error
   curly:
     - error
     - multi
