--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
 		"@types/node": "20.8.5",
 		"@walletconnect/web3-provider": "1.8.0",
 		"@web3modal/ethers5": "3.5.7",
+		"boxen": "7.1.1",
+		"chalk": "5.3.0",
 		"chart.js": "4.4.1",
 		"colorthief": "2.4.0",
 		"compression": "1.7.4",
