--- a/package.json
+++ b/package.json
@@ -15,29 +15,29 @@
 		"build-2": "cross-env NODE_OPTIONS='-r dotenv/config --max-old-space-size=8192' VITE_SCORES_PKG_VERSION=v.$(npm pkg get version --workspaces=false | tr -d \\\") VITE_SCORES_LIB_PKG_VERSION=v.$(npm info @betarena/scores-lib version | tr -d \\\") VITE_SENTRY_UPLOAD_SOURCEMAPS=true vite build",
 		"test": "npm run test:integration && npm run test:unit",
 		"svelte-check": "svelte-check --tsconfig ./tsconfig.json",
-		"svelte-check::watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"prettier::eslint::lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"prettier::format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"prettier::format::src": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ./src",
-		"sveltekit::debug": "cross-env NODE_OPTIONS='--inspect' vite dev --host --port 3050",
-		"sveltekit::debug::bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
-		"sveltekit::debug::preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 4173",
-		"sveltekit::dev": "cross-env NODE_OPTIONS='-r dotenv/config' vite dev --host --port 3050 --force",
-		"sveltekit::dev::1-click::spin": "make dev-1-click-spin",
-		"sveltekit::dev::docker": "vite dev --host --port 5055",
-		"sveltekit::dev::docker:up": "docker-compose -f docker-compose.dev.yml up",
-		"sveltekit::staging": "npm run sveltekit::dev -- --mode staging",
-		"sveltekit::build": "vite build",
-		"sveltekit::preview": "vite preview --host --port 4173",
-		"sveltekit::preview::1-click::spin": "make preview-1-click-spin",
-		"sveltekit::start": "node build/index.js",
-		"sveltekit::start::docker": "node server-docker.js",
-		"sveltekit::start::heroku": "node server-heroku.js",
-		"pkg::@betarena/scores-lib::pull::next": "npm i @betarena/scores-lib@latest",
-		"pkg::@betarena/scores-lib::link": "npm link @betarena/scores-lib",
-		"test::integration": "playwright test",
-		"test::integration-ui": "playwright test --ui",
-		"test::unit": "vitest",
+		"svelte-check:|:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"prettier::eslint:|:lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"prettier:|:format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"prettier:|:format:|:src": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ./src",
+		"sveltekit:|:debug": "cross-env NODE_OPTIONS='--inspect' vite dev --host --port 3050",
+		"sveltekit:|:debug:|:bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
+		"sveltekit:|:debug:|:preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 4173",
+		"sveltekit:|:dev": "cross-env NODE_OPTIONS='-r dotenv/config' vite dev --host --port 3050 --force",
+		"sveltekit:|:dev:|:1-click:|:spin": "make dev-1-click-spin",
+		"sveltekit:|:dev:|:docker": "vite dev --host --port 5055",
+		"sveltekit:|:dev:|:docker:up": "docker-compose -f docker-compose.dev.yml up",
+		"sveltekit:|:staging": "npm run sveltekit:|:dev -- --mode staging",
+		"sveltekit:|:build": "vite build",
+		"sveltekit:|:preview": "vite preview --host --port 4173",
+		"sveltekit:|:preview:|:1-click:|:spin": "make preview-1-click-spin",
+		"sveltekit:|:start": "node build/index.js",
+		"sveltekit:|:start:|:docker": "node server-docker.js",
+		"sveltekit:|:start:|:heroku": "node server-heroku.js",
+		"pkg:|:@betarena/scores-lib:|:pull:|:next": "npm i @betarena/scores-lib@latest",
+		"pkg:|:@betarena/scores-lib:|:link": "npm link @betarena/scores-lib",
+		"test:|:integration": "playwright test",
+		"test:|:integration-ui": "playwright test --ui",
+		"test:|:unit": "vitest",
 		"coverage": "vitest run --coverage",
 		"sass-watch": "sass --watch static/app.scss static/app.css"
 	},
